Image not showing fixed

--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,7 @@ body {
     background: rgb(255, 255, 255);
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 100%);
 }
+
+.hero-project {
+    background-image: url("./images/system-hero.png");
+}
